reset inputs and add git ignore file

--- a/chapter2-exercise1.ipynb
+++ b/chapter2-exercise1.ipynb
@@ -26,7 +26,6 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "downloading Olivetti faces from http://cs.nyu.edu/~roweis/data/olivettifaces.mat to /home/nephiw/scikit_learn_data\n",
         "Modified Olivetti faces dataset.\n",
         "\n",
         "The original database was available from (now defunct)\n",
@@ -46,18 +45,12 @@
         "tolerance for some side movement).\n",
         "\n",
         "The original dataset consisted of 92 x 112, while the Roweis version\n",
-        "consists of 64x64 images.\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
+        "consists of 64x64 images.\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -89,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -114,7 +107,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -149,7 +142,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -258,7 +251,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -279,7 +272,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -354,7 +347,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -375,7 +368,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -398,7 +391,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -439,7 +432,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -453,16 +446,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
